# Datastream

./: .gitattributes  .gitignore  examine.ipynb  pyproject.toml  tail_index.ipynb
00_raw_data_retrieval/: create_batched_ds_lists.ipynb  setup_folder_structure.py
01_Filtering/: 00_raw_import_processing.py  01_filtering_EU.py  01_filtering_EU.txt  01_filtering_US.py  01_filtering_US.txt  check.ipynb  filter.py  playground.ipynb
